# Xcel-HeatPump

./: .coverage  .coveragerc  .gitignore  Home.drawio  Makefile  README.md  aggregation_result.json  control_visualized.py  drawio.xml  hp-api.service  hp-controller.service  hp-sync.service  hp-web.service  hp_rtu_tui.py  modbus_register_dict.json  modbusrtu_test.py  original_setting.json  print_tree.py  pyproject.toml  pytest.ini  register_i18n.py  test.py  四系统热泵控制器MODBUS协议.doc
api_src/hp_api/: main.py  redis_store.py  schemas.py  settings.py
api_src/hp_api/utils/: logging_config.py
src/hp_controller/: main.py  settings.py
src/hp_controller/master/: aggregation.py  algorithm.py  client.py  redis_master.py  register_mapping.py
src/hp_controller/utils/: logging_config.py
sync_src/hp_sync/: main.py  settings.py
sync_src/hp_sync/master/: client.py  register_mapping.py
sync_src/hp_sync/service/: redis_sync.py
sync_src/hp_sync/utils/: logging_config.py  raw_modbus_logger.py  recorder.py
tests/master/: test_aggregation.py  test_algorithm.py  test_client.py
tests/utils_test/: test_logger.py
web-src/: package-lock.json  package.json  vue.config.js
web-src/src/: App.vue  bit-registers.js  config.js  register-labels.js
